Snap to faces in edit mode with x-ray enabled doesn't work anymore. #92311

Closed
opened 2021-10-18 13:37:16 +02:00 by Nanoek Knol · 6 comments
Member

System Information
Operating system: Linux-5.4.0-88-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics (ICL GT1) Intel 4.6 (Core Profile) Mesa 21.0.3

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-10-17 03:58, hash: 3c36803189
Worked: Blender 2.93.5

Caused by 91c33c8b99

Short description of error
Snapping to faces with x-ray enabled doesn’t work in edit mode anymore.

Exact steps for others to reproduce the error
Open up Blender and duplicate the default cube and scale it a bit down, than select the other cube. Go to edit mode and press Alt-Z to toggle x-ray mode, and than check the snapping option on the top of the window and set the mode to Face. When you select a vertex now and press G to move it around it doesn’t snap to the faces of the other cube.

#92311.blend

**System Information** Operating system: Linux-5.4.0-88-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Mesa Intel(R) UHD Graphics (ICL GT1) Intel 4.6 (Core Profile) Mesa 21.0.3 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-10-17 03:58, hash: `3c36803189` Worked: Blender 2.93.5 Caused by 91c33c8b99 **Short description of error** Snapping to faces with x-ray enabled doesn’t work in edit mode anymore. **Exact steps for others to reproduce the error** Open up Blender and duplicate the default cube and scale it a bit down, than select the other cube. Go to edit mode and press Alt-Z to toggle x-ray mode, and than check the snapping option on the top of the window and set the mode to Face. When you select a vertex now and press G to move it around it doesn’t snap to the faces of the other cube. [#92311.blend](https://archive.blender.org/developer/F11248630/T92311.blend)
Author
Member

Added subscriber: @Blendey

Added subscriber: @Blendey
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 91c33c8b99

@mano-wii: mind checking?

Caused by 91c33c8b99 @mano-wii: mind checking?

This issue was referenced by b246f81412

This issue was referenced by b246f8141236712b1a08c9a5ee2feda9bf4e2527

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-10-18 16:41:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92311
No description provided.