Fix T92311: Snap to faces in edit mode with x-ray enabled doesn't work

The `use_occlusion_test` parameter test was accidentally removed in
{rB91c33c8b9952}